--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,577 +1,93 @@
+html{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .home-page-container {
   width: 100%;
-  display: flex;
-  overflow: auto;
   min-height: 100vh;
+  display: flex;
   align-items: center;
-  flex-direction: column;
+  justify-content: center;
 }
-.home-page-home-page {
+
+.home-page {
   width: 100%;
-  height: 2077px;
-  display: flex;
-  overflow: hidden;
-  position: relative;
-  align-items: flex-start;
-  flex-shrink: 0;
-  background-color: rgba(255, 255, 255, 1);
+  max-width: 1440px;
+  padding: 20px;
+  box-sizing: border-box;
 }
-.home-page-frame1321316142 {
+
+header{
+  text-decoration: none;
+  vertical-align:bottom;
+}
+
+.cabecalhoGradiente {
+  font-size: medium;
   gap: 10px;
-  top: 222px;
-  left: 291px;
-  width: 857px;
-  display: flex;
+  /* display: grid; */
+  /* grid-template-columns: 20% 16% 16% 16% 16% 16%; */
+  display:flex;
+  flex-direction: row;
+  justify-content: space-around;
   padding: 10px;
-  position: absolute;
   background: linear-gradient(90deg, rgba(235, 250, 255, 1) 0%, rgba(255, 198, 194, 1) 50%, rgba(137, 166, 209, 1) 100%);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) ;
-  align-items: center;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   border-radius: 12px;
-  flex-direction: column;
-  justify-content: center;
+  /* text-align: center; */
 }
-.home-page-copy {
-  gap: 24px;
-  width: 837px;
+
+.redirecionamentos{
+  font-size: x-large;
   display: flex;
-  align-items: center;
-  flex-shrink: 0;
-  flex-direction: column;
+  align-items:flex-end;
+  justify-content: space-around;
+  font-weight: 400;
+  font-style: normal;
+  vertical-align:bottom;
+  padding: 10px;
 }
-.home-page-text {
-  color: rgba(0, 0, 0, 1);
-  height: auto;
-  align-self: stretch;
-  text-align: center;
-  line-height: normal;
+
+a{
+  text-decoration: none;
+  color: black;
 }
-.home-page-text02 {
-  color: rgba(130, 130, 130, 0.5);
-  height: auto;
-  align-self: stretch;
-  text-align: center;
-  line-height: 150%;
+
+a:hover{
+  color: rgb(83, 83, 83);
 }
-.home-page-image-dragintofill {
-  top: 621px;
-  left: 40px;
-  width: 1360px;
-  height: 680px;
-  display: flex;
-  overflow: hidden;
-  position: absolute;
-  align-items: flex-start;
-  flex-shrink: 0;
-  border-radius: 8.5px;
+
+img{
+  max-width: min-content;
+  max-height: min-content;
+  float: left;
 }
-.home-page-image9-marco-site1 {
-  top: 5.6843418860808015e-14px;
-  left: 69.39368438720703px;
-  width: 1217px;
-  height: 680px;
-  position: absolute;
+
+h1{
+  font-size: x-large;
+  padding-left: 20px;
+  /* padding-top: 20%; */
+  float: left;
 }
-.home-page-heading {
-  gap: 8px;
-  top: 490px;
-  left: 80px;
-  width: 733px;
-  display: flex;
-  position: absolute;
-  align-items: flex-start;
-  flex-shrink: 0;
-  flex-direction: column;
+
+h2{
+  font-size: large;
+  /* padding-left: 20px; */
+  padding-top: 20%;
+  float: left;
 }
-.home-page-text04 {
-  color: rgba(0, 0, 0, 1);
-  height: auto;
-  align-self: stretch;
-  text-align: left;
-  line-height: 110.00000238418579%;
-}
-.home-page-text06 {
-  color: rgba(130, 130, 130, 1);
-  width: 625px;
-  height: auto;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-heading1 {
-  gap: 8px;
-  top: 1381px;
-  left: 80px;
-  width: 733px;
-  display: flex;
-  position: absolute;
-  align-items: flex-start;
-  flex-shrink: 0;
-  flex-direction: column;
-}
-.home-page-text08 {
-  color: rgba(0, 0, 0, 1);
-  height: auto;
-  align-self: stretch;
-  text-align: left;
-  line-height: 110.00000238418579%;
-}
-.home-page-text10 {
-  color: rgba(130, 130, 130, 1);
-  width: 625px;
-  height: auto;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-cards {
-  gap: 32px;
-  top: 1501px;
-  left: 80px;
-  width: 1280px;
-  display: flex;
-  position: absolute;
-  align-items: flex-start;
-  flex-shrink: 0;
-}
+
 .home-page-customer-quote {
-  gap: 48px;
-  width: 405.3333435058594px;
-  display: flex;
-  padding: 32px;
-  flex-grow: 1;
-  box-shadow: -4px 8px 20px 0px rgba(0, 0, 0, 0.10000000149011612) ;
-  align-items: flex-start;
-  flex-shrink: 0;
-  border-color: rgba(247, 247, 247, 1);
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 12px;
-  flex-direction: column;
-}
-.home-page-text12 {
-  color: rgba(0, 0, 0, 1);
-  height: auto;
-  align-self: stretch;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-avatar {
-  gap: 16px;
-  display: flex;
-  align-items: center;
-}
-.home-page-avatar1 {
-  width: 45px;
-  height: 45px;
-}
-.home-page-frame2610301 {
-  gap: 2px;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-}
-.home-page-text14 {
-  color: rgba(0, 0, 0, 1);
-  height: auto;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-text16 {
-  color: rgba(130, 130, 130, 1);
-  height: auto;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-customer-quote1 {
-  gap: 48px;
-  display: flex;
-  padding: 32px;
-  flex-grow: 1;
-  align-self: stretch;
-  box-shadow: -4px 8px 20px 0px rgba(0, 0, 0, 0.10000000149011612) ;
-  align-items: flex-start;
-  border-color: rgba(247, 247, 247, 1);
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 12px;
-  flex-direction: column;
-}
-.home-page-text18 {
-  color: rgba(0, 0, 0, 1);
-  height: auto;
-  align-self: stretch;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-avatar2 {
-  gap: 16px;
-  display: flex;
-  align-items: center;
-}
-.home-page-avatar3 {
-  width: 45px;
-  height: 45px;
-}
-.home-page-frame26103011 {
-  gap: 2px;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-}
-.home-page-text20 {
-  color: rgba(0, 0, 0, 1);
-  height: auto;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-text22 {
-  color: rgba(130, 130, 130, 1);
-  height: auto;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-customer-quote2 {
-  gap: 48px;
-  display: flex;
-  padding: 32px;
-  flex-grow: 1;
-  align-self: stretch;
-  box-shadow: -4px 8px 20px 0px rgba(0, 0, 0, 0.10000000149011612) ;
-  align-items: flex-start;
-  border-color: rgba(247, 247, 247, 1);
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 12px;
-  flex-direction: column;
-}
-.home-page-text24 {
-  color: rgba(0, 0, 0, 1);
-  height: auto;
-  align-self: stretch;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-avatar4 {
-  gap: 16px;
-  display: flex;
-  align-items: center;
-}
-.home-page-avatar5 {
-  width: 45px;
-  height: 45px;
-}
-.home-page-frame26103012 {
-  gap: 2px;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-}
-.home-page-text26 {
-  color: rgba(0, 0, 0, 1);
-  height: auto;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-text28 {
-  color: rgba(130, 130, 130, 1);
-  height: auto;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-navigation {
-  top: 0px;
-  left: 0px;
-  width: 1440px;
-  height: 164px;
-  display: flex;
-  overflow: hidden;
-  position: absolute;
-  background: linear-gradient(90deg, rgba(235, 250, 255, 1) 0%, rgba(255, 198, 194, 1) 47%, rgba(137, 166, 209, 1) 100%);
-  align-items: flex-start;
-  flex-shrink: 0;
-}
-.home-page-items {
-  gap: 48px;
-  top: 56px;
-  left: 695px;
-  width: 665px;
-  display: flex;
-  position: absolute;
-  align-items: center;
-  justify-content: flex-end;
-}
-.home-page-text30 {
-  color: rgba(0, 0, 0, 1);
-  height: auto;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-text32 {
-  color: rgba(0, 0, 0, 1);
-  height: auto;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-text34 {
-  color: rgba(0, 0, 0, 1);
-  height: auto;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-text36 {
-  color: rgba(0, 0, 0, 1);
-  height: auto;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-login {
-  width: 132px;
-  height: 47px;
-  display: flex;
-  position: relative;
-  align-items: flex-start;
-  flex-shrink: 1;
-  background-color: rgba(130, 130, 130, 0.2800000011920929);
-}
-.home-page-text38 {
-  color: rgba(0, 0, 0, 1);
-  width: 132px;
-  height: auto;
-  position: absolute;
-  text-align: center;
-  line-height: 150%;
-}
-.home-page-navigation-footer {
-  top: 1813px;
-  left: 0px;
-  width: 1440px;
-  height: 264px;
-  display: flex;
-  overflow: hidden;
-  position: absolute;
+  margin-top: 20px;
+  padding: 15px;
   background: linear-gradient(90deg, rgba(235, 250, 255, 1) 0%, rgba(255, 198, 194, 1) 50%, rgba(137, 166, 209, 1) 100%);
-  align-items: flex-start;
-  flex-shrink: 0;
-}
-.home-page-items1 {
-  gap: 24px;
-  top: 48px;
-  left: 954px;
-  width: 187px;
+  border-radius: 12px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   display: flex;
-  position: absolute;
-  align-items: flex-end;
-  flex-shrink: 0;
-  flex-direction: column;
-  justify-content: center;
-}
-.home-page-text40 {
-  color: rgba(0, 0, 0, 1);
-  height: auto;
-  align-self: stretch;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-text42 {
-  color: rgba(68, 68, 68, 1);
-  height: auto;
-  align-self: stretch;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-text44 {
-  color: rgba(68, 68, 68, 1);
-  height: auto;
-  align-self: stretch;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-text46 {
-  color: rgba(68, 68, 68, 1);
-  height: auto;
-  align-self: stretch;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-items2 {
-  gap: 24px;
-  top: 48px;
-  left: 1173px;
-  width: 187px;
-  display: flex;
-  position: absolute;
-  align-items: flex-end;
-  flex-shrink: 0;
-  flex-direction: column;
-  justify-content: center;
-}
-.home-page-text48 {
-  color: rgba(0, 0, 0, 1);
-  height: auto;
-  align-self: stretch;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-text50 {
-  color: rgba(68, 68, 68, 1);
-  height: auto;
-  align-self: stretch;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-text52 {
-  color: rgba(68, 68, 68, 1);
-  height: auto;
-  align-self: stretch;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-text54 {
-  color: rgba(68, 68, 68, 1);
-  height: auto;
-  align-self: stretch;
-  text-align: left;
-  line-height: 150%;
-}
-.home-page-social-icons {
-  gap: 8px;
-  top: 176px;
-  left: 80px;
-  width: 184px;
-  display: flex;
-  position: absolute;
-  align-items: flex-start;
-}
-.home-page-buttons-icon {
-  gap: 8px;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  padding: 8px;
-  position: relative;
   align-items: center;
-  border-radius: 4px;
-  justify-content: center;
+  justify-content: space-between;
 }
-.home-page-icon {
-  top: 8px;
-  left: 8px;
-  width: 24px;
-  height: 24px;
-  display: flex;
-  position: absolute;
-  align-items: flex-start;
-  flex-shrink: 0;
-}
-.home-page-icon1 {
-  top: 2.0399999618530273px;
-  left: 2px;
-  width: 20px;
-  height: 20px;
-  position: absolute;
-}
-.home-page-buttons-icon1 {
-  gap: 8px;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  padding: 8px;
-  position: relative;
-  align-items: center;
-  border-radius: 4px;
-  justify-content: center;
-}
-.home-page-icon2 {
-  top: 8px;
-  left: 8px;
-  width: 24px;
-  height: 24px;
-  display: flex;
-  position: absolute;
-  align-items: flex-start;
-  flex-shrink: 0;
-}
-.home-page-icon3 {
-  top: 3px;
-  left: 3px;
-  width: 18px;
-  height: 18px;
-  position: absolute;
-}
-.home-page-buttons-icon2 {
-  gap: 8px;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  padding: 8px;
-  position: relative;
-  align-items: center;
-  border-radius: 4px;
-  justify-content: center;
-}
-.home-page-icon4 {
-  top: 8px;
-  left: 8px;
-  width: 24px;
-  height: 24px;
-  display: flex;
-  position: absolute;
-  align-items: flex-start;
-  flex-shrink: 0;
-}
-.home-page-icon5 {
-  top: 5px;
-  left: 2px;
-  width: 20px;
-  height: 14px;
-  position: absolute;
-}
-.home-page-buttons-icon3 {
-  gap: 8px;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  padding: 8px;
-  position: relative;
-  align-items: center;
-  border-radius: 4px;
-  justify-content: center;
-}
-.home-page-icon6 {
-  top: 8px;
-  left: 8px;
-  width: 24px;
-  height: 24px;
-  display: flex;
-  position: absolute;
-  align-items: flex-start;
-  flex-shrink: 0;
-}
-.home-page-icon7 {
-  top: 2px;
-  left: 2px;
-  width: 20px;
-  height: 20px;
-  position: absolute;
-}
-.home-page-divider {
-  top: 1px;
-  left: 80px;
-  width: 1280px;
-  height: 1px;
-  position: absolute;
-  align-self: stretch;
-}
-.home-page-imagem202404012103012822 {
-  top: 1813px;
-  left: 1px;
-  width: 194px;
-  height: 191px;
-  position: absolute;
-}
-.home-page-imagem202404012103012821 {
-  top: -9px;
-  left: 0px;
-  width: 194px;
-  height: 191px;
-  position: absolute;
+
+.home-page-customer-quote img {
+  margin-right: 20px;
 }
