--- a/src/input.css
+++ b/src/input.css
@@ -13,3 +13,7 @@
 .transition-footer-2 {
     @apply hover:scale-110 transition-transform duration-300 ease-in-out;
 }
+
+.button-edit-del {
+    @apply bg-black text-white rounded-lg hover:text-black hover:bg-slate-200 transition-colors duration-150 ease-in-out;
+}
